--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
-    "elasticsearch": "^6.1.0",
+    "elasticsearch": "> 6.1.0",
     "express": "^4.13.3",
     "fluxocket": "^1.0.0",
     "object-assign": "^3.0.0",
